@@ -1,23 +1,26 @@
 package testexecutor.codeline;
 
-import slice.CodeLineSlice;
-import slice.ICodeSlice;
+import org.apache.commons.io.FilenameUtils;
+import fragment.CodeLineFragment;
+import fragment.ICodeFragment;
 import testexecutor.ATestExecutor;
 import testexecutor.ExtractorException;
 import testexecutor.TestExecutorOptions;
 
 import java.io.File;
 import java.io.IOException;
+import java.nio.file.FileSystems;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /*
-    A simple extractor that considers each line as a separate slice
+    A simple executor that considers each line as a separate fragment
  */
 public class CodeLineTestExecutor extends ATestExecutor {
 
@@ -26,25 +29,30 @@ public class CodeLineTestExecutor extends ATestExecutor {
 	}
 
 	@Override
-	public List<ICodeSlice> extractSlices() {
-		File sourceFolder = getSourceFolder(getOptions().getModulePath());
+	public List<ICodeFragment> extractFragments() {
+		File sourceFolder = getSourceFolder(getTestSourcePath(), getOptions().getSourceFolderPath());
 		List<Path> filePaths;
-		try (Stream<Path> stream = Files.walk(Path.of(sourceFolder.getPath()))) {
-			filePaths = stream.filter(Files::isRegularFile).toList();
+		String unitTestFolderPath = getTestSourcePath().toString() + "\\" + getOptions().getUnitTestFolderPath();
+		try (Stream<Path> stream = Files.walk(FileSystems.getDefault().getPath(sourceFolder.getPath()))) {
+			filePaths = stream
+				.filter(file -> Files.isRegularFile(file)
+					&& "java".equals(FilenameUtils.getExtension(file.toString()))
+					&& !file.toString().startsWith(unitTestFolderPath))
+				.collect(Collectors.toList());
 
 		} catch (IOException e) {
 			throw new ExtractorException("Unable to list files in folder" + sourceFolder.toPath(), e);
 		}
 
-		List<ICodeSlice> slices = new ArrayList<>();
+		List<ICodeFragment> fragments = new ArrayList<>();
 
-		int sliceNr = 0;
+		int fragmentNr = 0;
 		for (Path filePath : filePaths) {
 			try {
 				String relativeFileName = filePath.toString().substring(sourceFolder.toString().length());
 				List<String> lines = Files.readAllLines(filePath);
 				for (int i = 0; i < lines.size(); i++) {
-					slices.add(new CodeLineSlice(relativeFileName, lines.get(i), i, sliceNr++));
+					fragments.add(new CodeLineFragment(relativeFileName, lines.get(i), i, fragmentNr++));
 				}
 
 			} catch (IOException e) {
@@ -52,24 +60,24 @@ public class CodeLineTestExecutor extends ATestExecutor {
 			}
 		}
 
-		return slices;
+		return fragments;
 	}
 
 	@Override
-	protected Map<String, String> mapSlicesToFiles(List<ICodeSlice> slices) {
+	protected Map<String, String> mapFragmentsToFiles(List<ICodeFragment> fragments) {
 		Map<String, String> files = new HashMap<>();
 		String fileName = null;
 		StringBuilder sb = null;
-		for (ICodeSlice sl : slices) {
-			CodeLineSlice slice = (CodeLineSlice) sl;
-			if (!slice.getPath().equals(fileName)) {
+		for (ICodeFragment fr : fragments) {
+			CodeLineFragment fragment = (CodeLineFragment) fr;
+			if (!fragment.getPath().equals(fileName)) {
 				if (sb != null) {
 					files.put(fileName, sb.toString());
 				}
-				fileName = slice.getPath();
+				fileName = fragment.getPath();
 				sb = new StringBuilder();
 			}
-			sb.append(slice.getCodeLine());
+			sb.append(fragment.getCodeLine());
 			sb.append("\n");
 		}
 		if (sb != null) {
